# rknn-3588-npu-yolo-accelerate

./: CMakeLists.txt  README.md  README.zh.md  README_en.md  yolorun.sh
src/: yolov5_detect.cpp
src/draw/: cv_draw.cpp  cv_draw.h
src/engine/: engine.h  rknn_engine.cpp  rknn_engine.h
src/process/: preprocess.cpp  preprocess.h  yolov5_postprocess.cpp  yolov5_postprocess.h
src/task/: yolov5.cpp  yolov5.h  yolov5_thread_pool.cpp  yolov5_thread_pool.h
src/types/: datatype.h  error.h  yolo_datatype.h
src/utils/: engine_helper.h  logging.h
